# tictactoe_hsiyu_chen

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/tictactoe_hc3448/: __init__.py  tictactoe_hc3448.py
tests/: test_tictactoe_hc3448.py
